# 2024-P1-quocdat402

./: README.md  pyproject.toml
todo/views/: routes.py
