[tool.poetry]
name = "2024-p1-quocdat402"
version = "0.1.0"
description = ""
authors = ["quocdat402 <43123171+quocdat402@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
